--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <header class="corporate-header">
   <div class="header-container">
     <div class="brand">
-      <div class="brand-logo">CL</div>
+      <div class="brand-logo">CL ms</div>
       <div class="brand-text">
         <h1>Customer Lead</h1>
         <span>Management System</span>
