--- a/src/app/enquiry-form/enquiry-form.component.html
+++ b/src/app/enquiry-form/enquiry-form.component.html
@@ -258,6 +258,16 @@
           </div>
         </div>
 
+        <div class="form-group small-box">
+          <label for="rating">Rating (out of 10) <span style="color: red">*</span></label>
+          <input type="text" id="rating" formControlName="rating" maxlength="2" pattern="^(10|[1-9])$" placeholder="1-10" style="width: 150px;" />
+          <div class="error-message" *ngIf="submitted && f['rating'].invalid">
+            <span *ngIf="f['rating'].errors?.['required']">Rating is required</span>
+            <span *ngIf="f['rating'].errors?.['min'] || f['rating'].errors?.['max']">Enter a whole number between 1 and 10</span>
+            <span *ngIf="f['rating'].errors?.['pattern']">Only whole numbers allowed (1-10)</span>
+          </div>
+        </div>
+
         <div class="form-group">
           <label for="attendedBy">Attended By</label>
           <input 
