--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -2,7 +2,7 @@
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
     <div class="login-header">
       <div class="company-logo">CL</div>
-      <h2>Welcome Back</h2>
+      <h2>Welcome Back, Bro</h2>
       <p>Sign in to your Customer Lead Management account</p>
     </div>
     <div class="form-group">
